# GLRenderer

./: CMakeLists.txt
.cache/clangd/index/: Model.cpp.0D3C259467D57D58.idx  Model.h.87921ECB78CB3F8A.idx  common.h.E486CE5F3D198BF1.idx  gl.c.BF3687831AF96BAB.idx  gl.h.B0C32F9DD7DD2307.idx  khrplatform.h.E4455ADBDC8B48A1.idx  logging.h.68DDDD8073F9BEAC.idx  main.cpp.004828F7FBA26ABC.idx
res/shaders/: Basic.frag  Basic.vert
src/: Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  common.h  logging.h  main.cpp
vendors/glad/include/glad/: wgl.h
vendors/glad/src/include/glad/: gl.h  vulkan.h
